--- a/Hackathon/main.html
+++ b/Hackathon/main.html
@@ -9,22 +9,12 @@
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
      
-   <img src="images/CSE_Wordmark.jpg" id = "image1">
-   <img src = "images/IMG_7060.jpg" id = "image2">
 </head>
 
 <body>
  
    <div id="input">
-    <label id="maintext" >Please Create a Password</label><br>
-    <input oninput="passwordCheck()" type="password" id="password" name="password">
-    <br>
-        <span id="StrengthDisp" class="badge displayBadge">Weak</span>
-      <br>
-      <div id="meter">
-         <div id="pswmeter"></div>
-         <div id="pswmeter-message"></div>
-       </div>
+    <button style=""onclick="Location.href='index.html'"></button>
 
    </div>
    
