--- a/Hackathon/main.html
+++ b/Hackathon/main.html
@@ -14,7 +14,7 @@
 <body>
  
    <div id="input">
-    <button style=""onclick="Location.href='index.html'"></button>
+    <button style="height: 50px;width: 50px;"onclick="Location.href='index.html'"></button>
 
    </div>
    
