--- a/Hackathon/Index.html
+++ b/Hackathon/Index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+<div class= 'container'>
+  <div class="container_content">
+    <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +12,25 @@
    <img src="images/CSE_Wordmark.jpg" id = "image1">
    <img src = "images/IMG_7060.jpg" id = "image2">
 </head>
+
 <body>
-    
+ 
    <div id="input">
     <label id="maintext" >Please Create a Password</label><br>
-    <input type="password" id="password" name="password">
-    
-   </div>
-  
+    <input oninput="passwordCheck()" type="password" id="password" name="password">
+    <br>
+        <span id="StrengthDisp" class="badge displayBadge">Weak</span>
+      <br>
+      <div id="meter">
+         <div id="pswmeter"></div>
+         <div id="pswmeter-message"></div>
+       </div>
 
+   </div>
+   
+   <script src="index.js"></script>
 
 </body>
+   </div>
+
 </html>
