--- a/Hackathon/Index.html
+++ b/Hackathon/Index.html
@@ -27,7 +27,13 @@
        </div>
 
    </div>
-   
+   <div id="generatePassword">
+    <button style="position: absolute;top:80%;left:40%" class="cybr-btn">
+      Cyber<span aria-hidden>_</span>
+      <span aria-hidden class="cybr-btn__glitch">Cyber_</span>
+      <span aria-hidden class="cybr-btn__tag">R25</span>
+    </button>
+   </div>
    <script src="index.js"></script>
 
 </body>
