--- a/Hackathon/Index.html
+++ b/Hackathon/Index.html
@@ -27,14 +27,23 @@
        </div>
 
    </div>
-   <div id="generatePassword">
-    <button style="position: absolute;top:80%;left:40%" class="cybr-btn">
-      Cyber<span aria-hidden>_</span>
-      <span aria-hidden class="cybr-btn__glitch">Cyber_</span>
-      <span aria-hidden class="cybr-btn__tag">R25</span>
+   <p style="position: absolute;top:70%;left:40%;font-size: 20px;" id="geeks"></p>
+   <div style="position: absolute;top:80%;left:40%" id="generatePassword">
+    <button  style="font-size: 15px;" onclick="gfg_Run()" class="cybr-btn">
+      Generate Password<span aria-hidden>_</span>
+      <span aria-hidden class="cybr-btn__glitch"></span>
+      <span aria-hidden class="cybr-btn__tag"></span>
     </button>
    </div>
+   <div>
+</div>
+  
    <script src="index.js"></script>
+   <script>
+
+
+
+   </script>
 
 </body>
    </div>
